static/styles.css
*{
    font-family: 'Julius Sans One', sans-serif;
  }
  
  body{
    background: url('https://i.imgur.com/bZOojWV.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    backdrop-filter: blur(5px);  
    background-color: rgb(63, 63, 63);}
  
  
  
  
  
  /* HEADER VID */
  
  header {
      position: relative;
      background-color: rgb(63, 63, 63);
      height: 100vh;
      min-height: 25rem;
      width: 100%;
      overflow: hidden;
    }
    
    header video {
      position: absolute;
      top: 38%;
      left: 50%;
      min-width: 100%;
      min-height: 100%;
      width: auto;
      height: auto;
      z-index: 0;
      -ms-transform: translateX(-50%) translateY(-50%);
      -moz-transform: translateX(-50%) translateY(-50%);
      -webkit-transform: translateX(-50%) translateY(-50%);
      transform: translateX(-50%) translateY(-50%);
    }
    
    header .container {
      position: relative;
      z-index: 2;
    }
    
    header .overlay {
      position: absolute;
      top: 0;
      left: 0;
      height: 100%;
      width: 100%;
      background-color: rgb(63, 63, 63);
      opacity: 0.5;
      z-index: 1;
    }
    
   
  /* NAVS */
  
  #nav-img{width: 6%;}
  
  @media only screen and (max-width:600px) {
      #nav-img{width: 15%;}
  }
  
  #instagram_link{width: 20%;}
  
  @media only screen and (max-width:600px) {
    #instagram_link{width:10%;}
  }
  @media only screen and (min-width: 600px) {
      #instagram_link{width: 6%;}
  } 
  @media only screen and (min-width: 768px) {
      #instagram_link{width: 5%;}
  }
  @media only screen and (min-width: 992px) {
      #instagram_link{width: 20%;}
  } 
  
  #header{color: rgb(248, 142, 55);
          font-family: 'Julius Sans One', sans-serif;
  }
  .lead{color: rgb(199, 115, 47);
        font-family: 'Julius Sans One', sans-serif;
  }
  
  @media only screen and (max-width:600px) {
    #header{font-size: 4rem;}
  }

 #instagram_link:hover{
    box-shadow: 0 0 8px 2px rgb(248, 142, 55); 

  }
/*  */


#site_construct{
    background-color: rgb(63, 63, 63);
    opacity: 0.4;
}
#pardon_dust h3, #pardon_dust h4, #pardon_dust h6{
    color: rgb(0, 255, 255);
    
}
@media only screen and (max-width:600px) {
    #pardon_dust h3{font-size: 1.5rem;}
    #pardon_dust h4{font-size: 1rem;}
    #pardon_dust h6{font-size: .7rem;}
  }

/* PACKAGES CARDs SECTION */


/* FADE IN EFFECT */

.packg_fadein, .cards_fadein, .about_fadein, .contact_fadein{
    opacity: 0;
    transform:translateY(20px);
    transition: 1s all ease-in-out;

}
.packages_section_appear, .cards_fadein_appear, .about_fadein_appear, .contact_fadein_appear{
    opacity: 1;
    transform: translateY(0px);
}



/* FADE IN EFFECT END */


.package_title{
    color: rgb(0, 255, 255);
}

.content h3{
    color: rgb(248, 142, 55);
    text-decoration: underline;
    text-decoration-color: rgb(0, 255, 255);
}

#packg_cards{
    margin-top: 10px;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

.box{
    border-radius: 4px;
    position: relative;
    width: 300px;
    height: 400px;
    background: rgb(63, 63, 63);
    box-shadow: 0 30px 30px rgba(0,0,0,.5);
}


@media only screen and (max-width:600px) {
    .box{margin-bottom: 25px;}
}   
@media only screen and (min-width:600px) {
    .box{margin-bottom: 25px;}
}

@media only screen and (max-width:600px) {
    .box{width: 345px;}
}
@media only screen and (min-width:576px) {
    .box{width: 200px;}
}
@media only screen and (min-width: 768px) {
    .box{width: 235px;}
}
@media only screen and (min-width: 992px) {
    .box{width: 300px;}
}



.box .imgBx{

    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.box .imgBx img{
    border-radius: 4px;

    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: 0.5s;

}

.box:hover .imgBx img{
    opacity: 0;
}

.box .content{
    border-radius: 4px;

    position: absolute;
    bottom: 20px;
    left: 10%;
    width: 80%;
    height: 60px;
    background: rgb(51, 51, 51);
    transition: 0.5s;
    overflow: hidden;

    padding: 15px;
    box-sizing: border-box;
}

.box:hover .content{
    width: 100%;
    height: 100%;
    bottom: 0;
    left: 0;

}

.box .content h3{
    margin: 0;
    padding: 0;
    font-size: 20px;

}
.box .content p{
    color: azure;
    margin: 10px 0 0;
    padding: 0;
    opacity: 0;
    line-height: 1.2em;
    transition: 0.5s;
    /* text-align: justify; */
}

.box:hover .content p{
    opacity: 1;
    transition-delay: 0.5s;
}



  /* OLD PACKAGES STYLE */
  
 #coming_soon_packages{color: rgb(248, 142, 55);}
 @media only screen and (max-width:600px) {
    #coming_soon_packages{font-size: 15px;}
 }
  #packages_section{margin-top: 100px;
    background-color: rgb(51, 51, 51);
    padding-bottom: 25px;
}
  #packages{margin-top: 50px;}

  
  @media only screen and (max-width:600px) {
    #packages_header{font-size: 3rem;}
  }
  
  @media only screen and (max-width:600px) {
    .package_title{font-size: 10px;}
    #custom_pckg_header{font-size: 14px;}
  }
  
  .details_span{color: rgb(58, 161, 161);  font-style: italic;}

  #customize_pckgs{
      margin-top: 15px;
  }

  .package_text{
      color: azure;
  }

  /*  */
 

  /* ABOUT SECTION */
  
  #about{margin-top: 150px;
    background-color: rgb(51, 51, 51);
}
  @media only screen and (max-width:600px) {
    #about_text h1{font-size: 3rem;}
  }
  
  #img_logo{width: 10%; border-radius: 4px;}
  @media only screen and (max-width:600px) {
    #img_logo{width: 25%;}
  }
  
  #logo_block{background-color: rgb(0, 255, 255);}
  .display-2{color: rgb(248, 142, 55); margin-bottom: 25px;}
  #about_text{color: aliceblue;}
  #pa_about{color: rgb(248, 142, 55); margin-top: 15px;}
  @media only screen and (max-width:600px) {
    #pa_about{font-size: 1rem;}
  }
  
  #about_paragraph{margin-top: 20px; margin-bottom: 100px;}
  #w{color: rgb(0, 255, 255);}
  #paft{color: rgb(248, 142, 55);}
  #constitution_link{color: rgb(185, 187, 189); font-weight: bold;}
  #party{color: rgb(248, 142, 55); font-style: italic;}
  
  #about_link{color: rgb(248, 142, 55); font-style: italic; font-weight: bold;}
  /*  */


  /* MORE ABOUT US SECTION */

.card{
    border-style: solid hidden solid hidden;
    border-color: rgb(248, 142, 55) rgb(51, 51, 51) rgb(248, 142, 55) rgb(51, 51, 51);}
.card-header button{
    color: rgb(0, 255, 255);
    font-style: italic;
    
}
.card-header button:hover{
    color: rgb(41, 190, 190)
}

.card-header{background-color: rgb(51, 51, 51);}

/* MORE ABOUT FADE IN */

.card-body{background-color: rgb(51, 51, 51);
    animation: fadeIn ease 2s;
    -webkit-animation: fadeIn ease 2s;
    -moz-animation: fadeIn ease 2s;
    -o-animation: fadeIn ease 2s;
    -ms-animation: fadeIn ease 2s;
}

/* @keyframes fadeIn {
    0% {
   
      opacity:0;
    }
    100% {
      opacity:1;
    }
  }
  
  @-moz-keyframes fadeIn {
    0% {

      opacity:0;
    }
    100% {
      opacity:1;
    }
  }
  
  @-webkit-keyframes fadeIn {
    0% {

      opacity:0;
    }
    100% {
      opacity:1;
    }
  }
  
  @-o-keyframes fadeIn {
    0% {

      opacity:0;
    }
    100% {
      opacity:1;
    }
  }
  
  @-ms-keyframes fadeIn {
    0% {
 
      opacity:0;
    }
    100% {
      opacity:1;
  }
} */


/*  */




.about_p{color: azure;}
  
.card-body span{color: rgb(248, 142, 55);}

#p{font-weight: bold;}

#co_name{color:rgb(252, 134, 38);
        text-decoration: underline;
        text-decoration-color: rgb(41, 190, 190);
}

.four_keys{color:rgb(252, 134, 38) ;
        text-decoration: underline !important;
        text-decoration-color: rgb(41, 190, 190) !important;
        font-weight: bold;
}


.collapsing {
    -webkit-transition-property: height, visibility;
    transition-property: height, visibility;
    -webkit-transition-duration: 2s;
    transition-duration: 2s;
    -webkit-transition-timing-function: ease;
    transition-timing-function: ease;
  }

/*  */




  hr{background-color: rgb(252, 134, 38);}





  /* CONTACT CARD */
  
  
  #contact{
      margin-top: 10px;
      max-width: 45rem;
      margin-bottom: 50px;
      border-radius: 4px;
      padding-top: 10px;
  }
  
  #contact_me{
    color: rgb(41, 190, 190);;
  }
  @media only screen and (max-width:600px) {
 #contact_me{
      font-size: 18px;
    }
  }
  
  .contact_form_input{
      text-align: center;
      display: block;
      width: 100%;
      margin: 15px 0;
      box-sizing: border-box;
      border: 0;
      background: rgb(61, 61, 61);
      padding: 10px 150px;
      color: azure;
      border-radius: 3px;
      outline: none;
    
  }
  
  @media only screen and (max-width:600px) {
    
    .contact_form_input{font-size: 10px;
    padding: 10px 75px;
    }
  }
  
  
  
  .contact_form_input:focus{
      box-shadow: 0 0 10px 4px rgb(199, 115, 47);
  }
  
  textarea.contact_form_input{
      resize: none;
      height: 120px;
  }
  
  #contact_btn{
      color: rgb(199, 115, 47);
      border-radius: 20px;
      border-style: solid;
      border-width: 2px;
      border-color: rgb(43, 42, 42);
      padding: 5px 25px;
      float: right;
      margin-bottom: 10px;
  }
  
  #contact_btn:hover{
      box-shadow: 0 0 10px 4px rgb(0, 255, 255); 
  }
  
  
  /* SCROLLBAR */
  
  ::-webkit-scrollbar{
      width: 15px;
  }
  
  ::-webkit-scrollbar-track{
      border: 7px solid;
      box-shadow: inset 0 0 2.5px 2px rgb(0,0,0,0.5);
  }
  
  ::-webkit-scrollbar-thumb{
    background: linear-gradient(45deg, rgb(248, 142, 55), rgb(43, 42, 42));
  
  }
  
  
  /* BACK TO TOP */
  
  #up_btn_img{
      max-width: 3rem;
      border-radius: 20px;
    }
  
  
    #back_to_top{
        margin-bottom: 25px;
    }
    
    
  
    #back_to_top img:hover{
      box-shadow: 0 0 10px 4px rgb(248, 142, 55); 
  
    }
  

